[project]
name = "comfyui-logic"
description = "An extension to ComfyUI that introduces logic nodes and conditional rendering capabilities."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/theUpsider/ComfyUI-Logic"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Logic"
Icon = ""
